# backend/api/openapi.yml
@@ -135,3 +135,32 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/Comment'
+
+  /recipes/category/{category}:
+    get:
+      summary: Retrieve recipes by category
+      parameters:
+        - name: category
+          in: path
+          description: category name
+          required: true
+          schema:
+            type: string
+            enum:
+              - dessert
+              - appetizer
+              - main_course
+              - meat
+              - fish
+              - salad
+              - dairy
+              - vegetarian
+      responses:
+        '200':
+          description: A list of recipes
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Recipe'
